# isometric-arcade

./: main.py  pyproject.toml  window.py
assets/: tileset.xcf
src/: city.py  constants.py  game.py
