[tool.poetry]
name = "mac5784-projeto"
version = "0.1.0"
description = ""
authors = ["Lucas de Sousa Rosa <roses.lucas404@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
